// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Traverser - Variables returns reference for a single variable 1`] = `
Array [
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 7,
      "line": 1,
    },
    "stop": Object {
      "column": 7,
      "line": 1,
    },
    "text": "n",
  },
]
`;

exports[`Reference Traverser - Variables returns references for a multiple variables 1`] = `
Array [
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 7,
      "line": 1,
    },
    "stop": Object {
      "column": 7,
      "line": 1,
    },
    "text": "n",
  },
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 16,
      "line": 1,
    },
    "stop": Object {
      "column": 16,
      "line": 1,
    },
    "text": "n",
  },
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 26,
      "line": 1,
    },
    "stop": Object {
      "column": 26,
      "line": 1,
    },
    "text": "n",
  },
]
`;

exports[`Reference Traverser - Variables returns references for a single query 1`] = `
Array [
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 7,
      "line": 1,
    },
    "stop": Object {
      "column": 7,
      "line": 1,
    },
    "text": "n",
  },
  Object {
    "rule": "VariableContext",
    "start": Object {
      "column": 17,
      "line": 1,
    },
    "stop": Object {
      "column": 17,
      "line": 1,
    },
    "text": "n",
  },
]
`;
